fix: add scroll for filters overflow

--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -64,6 +64,7 @@
 
 .filters {
   transition: all 0.2s ease-in-out;
+  overflow: scroll;
 }
 
 .footer {
